--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" output="test-bin" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/nanoxml/nanoxml-2.2.3.jar" sourcepath="lib.src/nanoxml/nanoxml-2.2.3.src.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/swt/linux64/swt.jar" sourcepath="lib.src/swt/linux/swt.src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/swt/org.eclipse.core.runtime_3.10.0.v20140318-2214.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/swt/org.eclipse.osgi_3.10.1.v20140909-1633.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/swt/org.eclipse.jface_3.10.1.v20140813-1009.jar"/>
@@ -32,5 +31,6 @@
 	<classpathentry kind="lib" path="lib/apache_xmlrpc/xml-apis-1.0.b2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/apache_xmlrpc/xmlrpc-client-3.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/apache_xmlrpc/xmlrpc-common-3.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/schlevoigt/devel/Privat/Java/libraries/swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
